build/parser.output
Terminals unused in grammar

   TOKEN_ERRO


Grammar

    0 $accept: s $end

    1 s: program

    2 program: global_var_declaration program
    3        | function_declaration program
    4        | /* empty */

    5 global_var_declaration: var_declaration ';'
    6                       | vector_declaration ';'

    7 var_declaration: var_type TK_IDENTIFICADOR

    8 vector_declaration: var_type TK_IDENTIFICADOR '[' expression ']'

    9 var_type: TK_PR_INT
   10         | TK_PR_FLOAT
   11         | TK_PR_BOOL
   12         | TK_PR_CHAR
   13         | TK_PR_STRING

   14 function_declaration: header local_var_declaration command_block

   15 header: var_type TK_IDENTIFICADOR '(' parameter_list ')'

   16 parameter_list: non_void_parameter_list
   17               | /* empty */

   18 non_void_parameter_list: parameter ',' non_void_parameter_list
   19                        | parameter

   20 parameter: var_type TK_IDENTIFICADOR

   21 local_var_declaration: var_declaration ';' local_var_declaration
   22                      | /* empty */

   23 command_block: '{' command_sequence '}'

   24 command_sequence: statement
   25                 | statement ';' command_sequence

   26 statement: non_void_command
   27          | void_command

   28 non_void_command: command_block
   29                 | func_call
   30                 | control_flow
   31                 | assignment
   32                 | input
   33                 | output
   34                 | return

   35 void_command: /* empty */

   36 assignment: TK_IDENTIFICADOR '=' expression
   37           | TK_IDENTIFICADOR '[' expression ']' '=' expression

   38 input: TK_PR_INPUT TK_IDENTIFICADOR

   39 output: TK_PR_OUTPUT non_void_expression_list

   40 non_void_expression_list: expression ',' non_void_expression_list
   41                         | expression

   42 return: TK_PR_RETURN expression

   43 func_call: TK_IDENTIFICADOR '(' arg_list ')'

   44 arg_list: non_void_arg_list
   45         | void_arg_list

   46 non_void_arg_list: arg ',' non_void_arg_list
   47                  | arg

   48 void_arg_list: /* empty */

   49 arg: expression

   50 control_flow: TK_PR_IF '(' expression ')' TK_PR_THEN non_void_command
   51             | TK_PR_IF '(' expression ')' TK_PR_THEN non_void_command TK_PR_ELSE non_void_command
   52             | TK_PR_WHILE '(' expression ')' TK_PR_DO non_void_command
   53             | TK_PR_DO non_void_command TK_PR_WHILE '(' expression ')'

   54 expression: TK_IDENTIFICADOR
   55           | TK_IDENTIFICADOR '[' expression ']'
   56           | TK_LIT_INT
   57           | TK_LIT_FLOAT
   58           | TK_LIT_FALSE
   59           | TK_LIT_TRUE
   60           | TK_LIT_CHAR
   61           | TK_LIT_STRING
   62           | expression '+' expression
   63           | expression '-' expression
   64           | '!' expression
   65           | '+' expression
   66           | '-' expression
   67           | expression '*' expression
   68           | expression '/' expression
   69           | expression '<' expression
   70           | expression '>' expression
   71           | '(' expression ')'
   72           | expression TK_OC_LE expression
   73           | expression TK_OC_GE expression
   74           | expression TK_OC_EQ expression
   75           | expression TK_OC_NE expression
   76           | expression TK_OC_AND expression
   77           | expression TK_OC_OR expression
   78           | func_call


Terminals, with rules where they appear

$end (0) 0
'!' (33) 64
'(' (40) 15 43 50 51 52 53 71
')' (41) 15 43 50 51 52 53 71
'*' (42) 67
'+' (43) 62 65
',' (44) 18 40 46
'-' (45) 63 66
'/' (47) 68
';' (59) 5 6 21 25
'<' (60) 69
'=' (61) 36 37
'>' (62) 70
'[' (91) 8 37 55
']' (93) 8 37 55
'{' (123) 23
'}' (125) 23
error (256)
TK_PR_INT (258) 9
TK_PR_FLOAT (259) 10
TK_PR_BOOL (260) 11
TK_PR_CHAR (261) 12
TK_PR_STRING (262) 13
TK_PR_IF (263) 50 51
TK_PR_THEN (264) 50 51
TK_PR_ELSE (265) 51
TK_PR_WHILE (266) 52 53
TK_PR_DO (267) 52 53
TK_PR_INPUT (268) 38
TK_PR_OUTPUT (269) 39
TK_PR_RETURN (270) 42
TK_OC_LE (271) 72
TK_OC_GE (272) 73
TK_OC_EQ (273) 74
TK_OC_NE (274) 75
TK_OC_AND (275) 76
TK_OC_OR (276) 77
TK_LIT_INT (277) 56
TK_LIT_FLOAT (278) 57
TK_LIT_FALSE (279) 58
TK_LIT_TRUE (280) 59
TK_LIT_CHAR (281) 60
TK_LIT_STRING (282) 61
TK_IDENTIFICADOR (283) 7 8 15 20 36 37 38 43 54 55
TOKEN_ERRO (284)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
s (47)
    on left: 1, on right: 0
program (48)
    on left: 2 3 4, on right: 1 2 3
global_var_declaration (49)
    on left: 5 6, on right: 2
var_declaration (50)
    on left: 7, on right: 5 21
vector_declaration (51)
    on left: 8, on right: 6
var_type (52)
    on left: 9 10 11 12 13, on right: 7 8 15 20
function_declaration (53)
    on left: 14, on right: 3
header (54)
    on left: 15, on right: 14
parameter_list (55)
    on left: 16 17, on right: 15
non_void_parameter_list (56)
    on left: 18 19, on right: 16 18
parameter (57)
    on left: 20, on right: 18 19
local_var_declaration (58)
    on left: 21 22, on right: 14 21
command_block (59)
    on left: 23, on right: 14 28
command_sequence (60)
    on left: 24 25, on right: 23 25
statement (61)
    on left: 26 27, on right: 24 25
non_void_command (62)
    on left: 28 29 30 31 32 33 34, on right: 26 50 51 52 53
void_command (63)
    on left: 35, on right: 27
assignment (64)
    on left: 36 37, on right: 31
input (65)
    on left: 38, on right: 32
output (66)
    on left: 39, on right: 33
non_void_expression_list (67)
    on left: 40 41, on right: 39 40
return (68)
    on left: 42, on right: 34
func_call (69)
    on left: 43, on right: 29 78
arg_list (70)
    on left: 44 45, on right: 43
non_void_arg_list (71)
    on left: 46 47, on right: 44 46
void_arg_list (72)
    on left: 48, on right: 45
arg (73)
    on left: 49, on right: 46 47
control_flow (74)
    on left: 50 51 52 53, on right: 30
expression (75)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78, on right: 8 36 37 40 41 42 49 50 51 52 53
    55 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77


state 0

    0 $accept: . s $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (program)

    s                       go to state 6
    program                 go to state 7
    global_var_declaration  go to state 8
    var_declaration         go to state 9
    vector_declaration      go to state 10
    var_type                go to state 11
    function_declaration    go to state 12
    header                  go to state 13


state 1

    9 var_type: TK_PR_INT .

    $default  reduce using rule 9 (var_type)


state 2

   10 var_type: TK_PR_FLOAT .

    $default  reduce using rule 10 (var_type)


state 3

   11 var_type: TK_PR_BOOL .

    $default  reduce using rule 11 (var_type)


state 4

   12 var_type: TK_PR_CHAR .

    $default  reduce using rule 12 (var_type)


state 5

   13 var_type: TK_PR_STRING .

    $default  reduce using rule 13 (var_type)


state 6

    0 $accept: s . $end

    $end  shift, and go to state 14


state 7

    1 s: program .

    $default  reduce using rule 1 (s)


state 8

    2 program: global_var_declaration . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (program)

    program                 go to state 15
    global_var_declaration  go to state 8
    var_declaration         go to state 9
    vector_declaration      go to state 10
    var_type                go to state 11
    function_declaration    go to state 12
    header                  go to state 13


state 9

    5 global_var_declaration: var_declaration . ';'

    ';'  shift, and go to state 16


state 10

    6 global_var_declaration: vector_declaration . ';'

    ';'  shift, and go to state 17


state 11

    7 var_declaration: var_type . TK_IDENTIFICADOR
    8 vector_declaration: var_type . TK_IDENTIFICADOR '[' expression ']'
   15 header: var_type . TK_IDENTIFICADOR '(' parameter_list ')'

    TK_IDENTIFICADOR  shift, and go to state 18


state 12

    3 program: function_declaration . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 4 (program)

    program                 go to state 19
    global_var_declaration  go to state 8
    var_declaration         go to state 9
    vector_declaration      go to state 10
    var_type                go to state 11
    function_declaration    go to state 12
    header                  go to state 13


state 13

   14 function_declaration: header . local_var_declaration command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 22 (local_var_declaration)

    var_declaration        go to state 20
    var_type               go to state 21
    local_var_declaration  go to state 22


state 14

    0 $accept: s $end .

    $default  accept


state 15

    2 program: global_var_declaration program .

    $default  reduce using rule 2 (program)


state 16

    5 global_var_declaration: var_declaration ';' .

    $default  reduce using rule 5 (global_var_declaration)


state 17

    6 global_var_declaration: vector_declaration ';' .

    $default  reduce using rule 6 (global_var_declaration)


state 18

    7 var_declaration: var_type TK_IDENTIFICADOR .
    8 vector_declaration: var_type TK_IDENTIFICADOR . '[' expression ']'
   15 header: var_type TK_IDENTIFICADOR . '(' parameter_list ')'

    '['  shift, and go to state 23
    '('  shift, and go to state 24

    $default  reduce using rule 7 (var_declaration)


state 19

    3 program: function_declaration program .

    $default  reduce using rule 3 (program)


state 20

   21 local_var_declaration: var_declaration . ';' local_var_declaration

    ';'  shift, and go to state 25


state 21

    7 var_declaration: var_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 26


state 22

   14 function_declaration: header local_var_declaration . command_block

    '{'  shift, and go to state 27

    command_block  go to state 28


state 23

    8 vector_declaration: var_type TK_IDENTIFICADOR '[' . expression ']'

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 41


state 24

   15 header: var_type TK_IDENTIFICADOR '(' . parameter_list ')'

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 17 (parameter_list)

    var_type                 go to state 42
    parameter_list           go to state 43
    non_void_parameter_list  go to state 44
    parameter                go to state 45


state 25

   21 local_var_declaration: var_declaration ';' . local_var_declaration

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 22 (local_var_declaration)

    var_declaration        go to state 20
    var_type               go to state 21
    local_var_declaration  go to state 46


state 26

    7 var_declaration: var_type TK_IDENTIFICADOR .

    $default  reduce using rule 7 (var_declaration)


state 27

   23 command_block: '{' . command_sequence '}'

    TK_PR_IF          shift, and go to state 47
    TK_PR_WHILE       shift, and go to state 48
    TK_PR_DO          shift, and go to state 49
    TK_PR_INPUT       shift, and go to state 50
    TK_PR_OUTPUT      shift, and go to state 51
    TK_PR_RETURN      shift, and go to state 52
    TK_IDENTIFICADOR  shift, and go to state 53
    '{'               shift, and go to state 27

    $default  reduce using rule 35 (void_command)

    command_block     go to state 54
    command_sequence  go to state 55
    statement         go to state 56
    non_void_command  go to state 57
    void_command      go to state 58
    assignment        go to state 59
    input             go to state 60
    output            go to state 61
    return            go to state 62
    func_call         go to state 63
    control_flow      go to state 64


state 28

   14 function_declaration: header local_var_declaration command_block .

    $default  reduce using rule 14 (function_declaration)


state 29

   56 expression: TK_LIT_INT .

    $default  reduce using rule 56 (expression)


state 30

   57 expression: TK_LIT_FLOAT .

    $default  reduce using rule 57 (expression)


state 31

   58 expression: TK_LIT_FALSE .

    $default  reduce using rule 58 (expression)


state 32

   59 expression: TK_LIT_TRUE .

    $default  reduce using rule 59 (expression)


state 33

   60 expression: TK_LIT_CHAR .

    $default  reduce using rule 60 (expression)


state 34

   61 expression: TK_LIT_STRING .

    $default  reduce using rule 61 (expression)


state 35

   43 func_call: TK_IDENTIFICADOR . '(' arg_list ')'
   54 expression: TK_IDENTIFICADOR .
   55           | TK_IDENTIFICADOR . '[' expression ']'

    '['  shift, and go to state 65
    '('  shift, and go to state 66

    $default  reduce using rule 54 (expression)


state 36

   65 expression: '+' . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 67


state 37

   66 expression: '-' . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 68


state 38

   64 expression: '!' . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 69


state 39

   71 expression: '(' . expression ')'

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 70


state 40

   78 expression: func_call .

    $default  reduce using rule 78 (expression)


state 41

    8 vector_declaration: var_type TK_IDENTIFICADOR '[' expression . ']'
   62 expression: expression . '+' expression
   63           | expression . '-' expression
   67           | expression . '*' expression
   68           | expression . '/' expression
   69           | expression . '<' expression
   70           | expression . '>' expression
   72           | expression . TK_OC_LE expression
   73           | expression . TK_OC_GE expression
   74           | expression . TK_OC_EQ expression
   75           | expression . TK_OC_NE expression
   76           | expression . TK_OC_AND expression
   77           | expression . TK_OC_OR expression

    TK_OC_LE   shift, and go to state 71
    TK_OC_GE   shift, and go to state 72
    TK_OC_EQ   shift, and go to state 73
    TK_OC_NE   shift, and go to state 74
    TK_OC_AND  shift, and go to state 75
    TK_OC_OR   shift, and go to state 76
    '<'        shift, and go to state 77
    '>'        shift, and go to state 78
    '+'        shift, and go to state 79
    '-'        shift, and go to state 80
    '*'        shift, and go to state 81
    '/'        shift, and go to state 82
    ']'        shift, and go to state 83


state 42

   20 parameter: var_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 84


state 43

   15 header: var_type TK_IDENTIFICADOR '(' parameter_list . ')'

    ')'  shift, and go to state 85


state 44

   16 parameter_list: non_void_parameter_list .

    $default  reduce using rule 16 (parameter_list)


state 45

   18 non_void_parameter_list: parameter . ',' non_void_parameter_list
   19                        | parameter .

    ','  shift, and go to state 86

    $default  reduce using rule 19 (non_void_parameter_list)


state 46

   21 local_var_declaration: var_declaration ';' local_var_declaration .

    $default  reduce using rule 21 (local_var_declaration)


state 47

   50 control_flow: TK_PR_IF . '(' expression ')' TK_PR_THEN non_void_command
   51             | TK_PR_IF . '(' expression ')' TK_PR_THEN non_void_command TK_PR_ELSE non_void_command

    '('  shift, and go to state 87


state 48

   52 control_flow: TK_PR_WHILE . '(' expression ')' TK_PR_DO non_void_command

    '('  shift, and go to state 88


state 49

   53 control_flow: TK_PR_DO . non_void_command TK_PR_WHILE '(' expression ')'

    TK_PR_IF          shift, and go to state 47
    TK_PR_WHILE       shift, and go to state 48
    TK_PR_DO          shift, and go to state 49
    TK_PR_INPUT       shift, and go to state 50
    TK_PR_OUTPUT      shift, and go to state 51
    TK_PR_RETURN      shift, and go to state 52
    TK_IDENTIFICADOR  shift, and go to state 53
    '{'               shift, and go to state 27

    command_block     go to state 54
    non_void_command  go to state 89
    assignment        go to state 59
    input             go to state 60
    output            go to state 61
    return            go to state 62
    func_call         go to state 63
    control_flow      go to state 64


state 50

   38 input: TK_PR_INPUT . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 90


state 51

   39 output: TK_PR_OUTPUT . non_void_expression_list

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    non_void_expression_list  go to state 91
    func_call                 go to state 40
    expression                go to state 92


state 52

   42 return: TK_PR_RETURN . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 93


state 53

   36 assignment: TK_IDENTIFICADOR . '=' expression
   37           | TK_IDENTIFICADOR . '[' expression ']' '=' expression
   43 func_call: TK_IDENTIFICADOR . '(' arg_list ')'

    '['  shift, and go to state 94
    '('  shift, and go to state 66
    '='  shift, and go to state 95


state 54

   28 non_void_command: command_block .

    $default  reduce using rule 28 (non_void_command)


state 55

   23 command_block: '{' command_sequence . '}'

    '}'  shift, and go to state 96


state 56

   24 command_sequence: statement .
   25                 | statement . ';' command_sequence

    ';'  shift, and go to state 97

    $default  reduce using rule 24 (command_sequence)


state 57

   26 statement: non_void_command .

    $default  reduce using rule 26 (statement)


state 58

   27 statement: void_command .

    $default  reduce using rule 27 (statement)


state 59

   31 non_void_command: assignment .

    $default  reduce using rule 31 (non_void_command)


state 60

   32 non_void_command: input .

    $default  reduce using rule 32 (non_void_command)


state 61

   33 non_void_command: output .

    $default  reduce using rule 33 (non_void_command)


state 62

   34 non_void_command: return .

    $default  reduce using rule 34 (non_void_command)


state 63

   29 non_void_command: func_call .

    $default  reduce using rule 29 (non_void_command)


state 64

   30 non_void_command: control_flow .

    $default  reduce using rule 30 (non_void_command)


state 65

   55 expression: TK_IDENTIFICADOR '[' . expression ']'

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 98


state 66

   43 func_call: TK_IDENTIFICADOR '(' . arg_list ')'

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    $default  reduce using rule 48 (void_arg_list)

    func_call          go to state 40
    arg_list           go to state 99
    non_void_arg_list  go to state 100
    void_arg_list      go to state 101
    arg                go to state 102
    expression         go to state 103


state 67

   62 expression: expression . '+' expression
   63           | expression . '-' expression
   65           | '+' expression .
   67           | expression . '*' expression
   68           | expression . '/' expression
   69           | expression . '<' expression
   70           | expression . '>' expression
   72           | expression . TK_OC_LE expression
   73           | expression . TK_OC_GE expression
   74           | expression . TK_OC_EQ expression
   75           | expression . TK_OC_NE expression
   76           | expression . TK_OC_AND expression
   77           | expression . TK_OC_OR expression

    '*'  shift, and go to state 81
    '/'  shift, and go to state 82

    $default  reduce using rule 65 (expression)


state 68

   62 expression: expression . '+' expression
   63           | expression . '-' expression
   66           | '-' expression .
   67           | expression . '*' expression
   68           | expression . '/' expression
   69           | expression . '<' expression
   70           | expression . '>' expression
   72           | expression . TK_OC_LE expression
   73           | expression . TK_OC_GE expression
   74           | expression . TK_OC_EQ expression
   75           | expression . TK_OC_NE expression
   76           | expression . TK_OC_AND expression
   77           | expression . TK_OC_OR expression

    '*'  shift, and go to state 81
    '/'  shift, and go to state 82

    $default  reduce using rule 66 (expression)


state 69

   62 expression: expression . '+' expression
   63           | expression . '-' expression
   64           | '!' expression .
   67           | expression . '*' expression
   68           | expression . '/' expression
   69           | expression . '<' expression
   70           | expression . '>' expression
   72           | expression . TK_OC_LE expression
   73           | expression . TK_OC_GE expression
   74           | expression . TK_OC_EQ expression
   75           | expression . TK_OC_NE expression
   76           | expression . TK_OC_AND expression
   77           | expression . TK_OC_OR expression

    $default  reduce using rule 64 (expression)


state 70

   62 expression: expression . '+' expression
   63           | expression . '-' expression
   67           | expression . '*' expression
   68           | expression . '/' expression
   69           | expression . '<' expression
   70           | expression . '>' expression
   71           | '(' expression . ')'
   72           | expression . TK_OC_LE expression
   73           | expression . TK_OC_GE expression
   74           | expression . TK_OC_EQ expression
   75           | expression . TK_OC_NE expression
   76           | expression . TK_OC_AND expression
   77           | expression . TK_OC_OR expression

    TK_OC_LE   shift, and go to state 71
    TK_OC_GE   shift, and go to state 72
    TK_OC_EQ   shift, and go to state 73
    TK_OC_NE   shift, and go to state 74
    TK_OC_AND  shift, and go to state 75
    TK_OC_OR   shift, and go to state 76
    '<'        shift, and go to state 77
    '>'        shift, and go to state 78
    '+'        shift, and go to state 79
    '-'        shift, and go to state 80
    '*'        shift, and go to state 81
    '/'        shift, and go to state 82
    ')'        shift, and go to state 104


state 71

   72 expression: expression TK_OC_LE . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 105


state 72

   73 expression: expression TK_OC_GE . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 106


state 73

   74 expression: expression TK_OC_EQ . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 107


state 74

   75 expression: expression TK_OC_NE . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 108


state 75

   76 expression: expression TK_OC_AND . expression

    TK_LIT_INT        shift, and go to state 29
    TK_LIT_FLOAT      shift, and go to state 30
    TK_LIT_FALSE      shift, and go to state 31
    TK_LIT_TRUE       shift, and go to state 32
    TK_LIT_CHAR       shift, and go to state 33
    TK_LIT_STRING     shift, and go to state 34
    TK_IDENTIFICADOR  shift, and go to state 35
    '+'               shift, and go to state 36
    '-'               shift, and go to state 37
    '!'               shift, and go to state 38
    '('               shift, and go to state 39

    func_call   go to state 40
    expression  go to state 109


state 76

   77 expression: expression TK_OC_OR . expression
